--- a/packages/components/src/link/style/index.less
+++ b/packages/components/src/link/style/index.less
@@ -1,4 +1,4 @@
-.m-link {
+.imm-link {
   display: inline-flex;
   flex-direction: row;
   align-items: center;
@@ -12,26 +12,26 @@
   font-size: 14px;
   font-weight: 500;
 }
-.m-linm--primary {
+.imm-link--primary {
   color: #409eff;
 }
-.m-linm--primary:hover {
+.imm-link--primary:hover {
   color: #66b1ff;
 }
 
-.m-link.is-disabled {
+.imm-link.is-disabled {
   cursor: not-allowed;
 }
 
-.m-link.is-disabled {
+.imm-link.is-disabled {
   cursor: not-allowed;
 }
 
-.m-linm--primary.is-disabled {
+.imm-link--primary.is-disabled {
   color: #a0cfff;
 }
 
-.m-link.is-underline:hover:after {
+.imm-link.is-underline:hover:after {
   content: "";
   position: absolute;
   left: 0;
