--- a/packages/components/src/button/style/index.less
+++ b/packages/components/src/button/style/index.less
@@ -1,4 +1,4 @@
-.m-button {
+.imm-button {
     display: inline-block;
     line-height: 1;
     white-space: nowrap;
@@ -26,14 +26,14 @@
       background-color: #ecf5ff;
     }
   }
-  .m-button.is-disabled {
+  .imm-button.is-disabled {
     color: #c0c4cc;
     cursor: not-allowed;
     background-image: none;
     background-color: #fff;
     border-color: #ebeef5;
   }
-  .m-button--primary {
+  .imm-button--primary {
     color: #fff;
     background-color: #409eff;
     border-color: #409eff;
@@ -43,7 +43,7 @@
       color: #fff;
     }
   }
-  .m-button--primary.is-plain {
+  .imm-button--primary.is-plain {
     color: #409eff;
     background: #ecf5ff;
     border-color: #b3d8ff;
@@ -53,24 +53,24 @@
       border-color: #409eff;
     }
   }
-  .m-button--primary.is-disabled,
-  .m-button--primary.is-disabled:active,
-  .m-button--primary.is-disabled:focus,
-  .m-button--primary.is-disabled:hover {
+  .imm-button--primary.is-disabled,
+  .imm-button--primary.is-disabled:active,
+  .imm-button--primary.is-disabled:focus,
+  .imm-button--primary.is-disabled:hover {
     color: #fff;
     background-color: #a0cfff;
     border-color: #a0cfff;
   }
   //朴素按钮禁用
-  .m-button--primary.is-disabled.is-plain,
-  .m-button--primary.is-disabled.is-plain:active,
-  .m-button--primary.is-disabled.is-plain:focus,
-  .m-button--primary.is-disabled.is-plain:hover {
+  .imm-button--primary.is-disabled.is-plain,
+  .imm-button--primary.is-disabled.is-plain:active,
+  .imm-button--primary.is-disabled.is-plain:focus,
+  .imm-button--primary.is-disabled.is-plain:hover {
     color: #8cc5ff;
     background-color: #ecf5ff;
     border-color: #d9ecff;
   }
-  .m-button--text {
+  .imm-button--text {
     border-color: transparent;
     color: #409eff;
     background: transparent;
@@ -82,7 +82,7 @@
       background-color: transparent;
     }
   }
-  .m-button--success {
+  .imm-button--success {
     color: #fff;
     background-color: #67c23a;
     border-color: #67c23a;
@@ -92,7 +92,7 @@
       color: #fff;
     }
   }
-  .m-button--success.is-plain {
+  .imm-button--success.is-plain {
     color: #67c23a;
     background: #f0f9eb;
     border-color: #c2e7b0;
@@ -102,24 +102,24 @@
       border-color: #67c23a;
     }
   }
-  .m-button--success.is-disabled,
-  .m-button--success.is-disabled:active,
-  .m-button--success.is-disabled:focus,
-  .m-button--success.is-disabled:hover {
+  .imm-button--success.is-disabled,
+  .imm-button--success.is-disabled:active,
+  .imm-button--success.is-disabled:focus,
+  .imm-button--success.is-disabled:hover {
     color: #fff;
     background-color: #b3e19d;
     border-color: #b3e19d;
   }
   //朴素按钮禁用
-  .m-button--success.is-disabled.is-plain,
-  .m-button--success.is-disabled.is-plain:active,
-  .m-button--success.is-disabled.is-plain:focus,
-  .m-button--success.is-disabled.is-plain:hover {
+  .imm-button--success.is-disabled.is-plain,
+  .imm-button--success.is-disabled.is-plain:active,
+  .imm-button--success.is-disabled.is-plain:focus,
+  .imm-button--success.is-disabled.is-plain:hover {
     color: #a4da89;
     background-color: #f0f9eb;
     border-color: #e1f3d8;
   }
-  .m-button--info {
+  .imm-button--info {
     color: #fff;
     background-color: #909399;
     border-color: #909399;
@@ -129,7 +129,7 @@
       color: #fff;
     }
   }
-  .m-button--info.is-plain {
+  .imm-button--info.is-plain {
     color: #909399;
     background-color: #f4f4f5;
     border-color: #d3d4d6;
@@ -140,25 +140,25 @@
     }
   }
   
-  .m-button--info.is-disabled,
-  .m-button--info.is-disabled:active,
-  .m-button--info.is-disabled:focus,
-  .m-button--info.is-disabled:hover {
+  .imm-button--info.is-disabled,
+  .imm-button--info.is-disabled:active,
+  .imm-button--info.is-disabled:focus,
+  .imm-button--info.is-disabled:hover {
     color: #fff;
     background-color: #c8c9cc;
     border-color: #c8c9cc;
     cursor: not-allowed;
   }
   //朴素按钮禁用
-  .m-button--info.is-disabled.is-plain,
-  .m-button--info.is-disabled.is-plain:active,
-  .m-button--info.is-disabled.is-plain:focus,
-  .m-button--info.is-disabled.is-plain:hover {
+  .imm-button--info.is-disabled.is-plain,
+  .imm-button--info.is-disabled.is-plain:active,
+  .imm-button--info.is-disabled.is-plain:focus,
+  .imm-button--info.is-disabled.is-plain:hover {
     color: #bcbec2;
     background-color: #f4f4f5;
     border-color: #e9e9eb;
   }
-  .m-button--warning {
+  .imm-button--warning {
     color: #fff;
     background-color: #e6a23c;
     border-color: #e6a23c;
@@ -168,7 +168,7 @@
       color: #fff;
     }
   }
-  .m-button--warning.is-plain {
+  .imm-button--warning.is-plain {
     color: #e6a23c;
     background: #ecf5ff;
     border-color: #b3d8ff;
@@ -178,24 +178,24 @@
       border-color: #e6a23c;
     }
   }
-  .m-button--warning.is-disabled,
-  .m-button--warning.is-disabled:active,
-  .m-button--warning.is-disabled:focus,
-  .m-button--warning.is-disabled:hover {
+  .imm-button--warning.is-disabled,
+  .imm-button--warning.is-disabled:active,
+  .imm-button--warning.is-disabled:focus,
+  .imm-button--warning.is-disabled:hover {
     color: #fff;
     background-color: #f3d19e;
     border-color: #f3d19e;
   }
   //朴素按钮禁用
-  .m-button--warning.is-disabled.is-plain,
-  .m-button--warning.is-disabled.is-plain:active,
-  .m-button--warning.is-disabled.is-plain:focus,
-  .m-button--warning.is-disabled.is-plain:hover {
+  .imm-button--warning.is-disabled.is-plain,
+  .imm-button--warning.is-disabled.is-plain:active,
+  .imm-button--warning.is-disabled.is-plain:focus,
+  .imm-button--warning.is-disabled.is-plain:hover {
     color: #f0c78a;
     background-color: #fdf6ec;
     border-color: #faecd8;
   }
-  .m-button--danger {
+  .imm-button--danger {
     color: #fff;
     background-color: #f56c6c;
     border-color: #f56c6c;
@@ -205,7 +205,7 @@
       color: #fff;
     }
   }
-  .m-button--warning.is-plain {
+  .imm-button--warning.is-plain {
     color: #f56c6c;
     background: #fef0f0;
     border-color: #fbc4c4;
@@ -215,18 +215,18 @@
       border-color: #f56c6c;
     }
   }
-  .m-button--danger.is-disabled,
-  .m-button--danger.is-disabled:active,
-  .m-button--danger.is-disabled:focus,
-  .m-button--danger.is-disabled:hover {
+  .imm-button--danger.is-disabled,
+  .imm-button--danger.is-disabled:active,
+  .imm-button--danger.is-disabled:focus,
+  .imm-button--danger.is-disabled:hover {
     color: #fff;
     background-color: #fab6b6;
     border-color: #fab6b6;
   }
-  .m-button--danger.is-disabled.is-plain,
-  .m-button--danger.is-disabled.is-plain:active,
-  .m-button--danger.is-disabled.is-plain:focus,
-  .m-button--danger.is-disabled.is-plain:hover {
+  .imm-button--danger.is-disabled.is-plain,
+  .imm-button--danger.is-disabled.is-plain:active,
+  .imm-button--danger.is-disabled.is-plain:focus,
+  .imm-button--danger.is-disabled.is-plain:hover {
     color: #f9a7a7;
     background-color: #fef0f0;
     border-color: #fde2e2;
@@ -237,19 +237,19 @@
   }
   
   // size
-  .m-button--medium {
+  .imm-button--medium {
     padding: 10px 20px;
     font-size: 14px;
     border-radius: 4px;
   }
   
-  .m-button--small {
+  .imm-button--small {
     padding: 9px 15px;
     font-size: 12px;
     border-radius: 3px;
   }
   
-  .m-button--mini {
+  .imm-button--mini {
     padding: 7px 15px;
     font-size: 12px;
     border-radius: 3px;
