--- a/packages/components/src/button/style/index.less
+++ b/packages/components/src/button/style/index.less
@@ -1,11 +1,12 @@
+@import "../../theme-chalk/common/index.scss";
 .imm-button {
     display: inline-block;
     line-height: 1;
     white-space: nowrap;
     cursor: pointer;
-    background: #fff;
-    border: 1px solid #dcdfe6;
-    color: #606266;
+    background: @--color-white;
+    border: 1px solid @--border-color-base;
+    color: @--color-text-regular;
     -webkit-appearance: none;
     text-align: center;
     box-sizing: border-box;
@@ -22,138 +23,150 @@
     & span+[class*=imm-icon] {
       margin-left: 6px;
     }
-  
+
     &:hover {
-      color: #409eff;
-      border-color: #c6e2ff;
-      background-color: #ecf5ff;
+      color: @--color-primary;
+      border-color: @--color-primary-light-7;
+      background-color: @--color-primary-light-9;
     }
   }
   .imm-button.is-disabled {
-    color: #c0c4cc;
+    color: @--color-text-placeholder;
     cursor: not-allowed;
     background-image: none;
-    background-color: #fff;
-    border-color: #ebeef5;
+    background-color: @--color-white;
+    border-color: @--border-color-lighter;
   }
   .imm-button.is-circle {
     border-radius: 50%;
     padding: 8px;
   }
   .imm-button--primary {
-    color: #fff;
-    background-color: #409eff;
-    border-color: #409eff;
+    color: @--color-white;
+    background-color: @--color-primary;
+    border-color: @--color-primary;
     &:hover {
-      background: #66b1ff;
-      border-color: #66b1ff;
-      color: #fff;
+      background: @--color-primary-light-2;
+      border-color: @--color-primary-light-2;
+      color: @--color-white;
     }
   }
   .imm-button--primary.is-plain {
-    color: #409eff;
-    background: #ecf5ff;
-    border-color: #b3d8ff;
+    color: @--color-primary;
+    background: @--color-primary-light-9;
+    border-color: @--color-primary-light-6;
     &:hover {
-      color: #fff;
-      background-color: #409eff;
-      border-color: #409eff;
+      color: @--color-white;
+      background-color: @--color-primary;
+      border-color: @--color-primary;
     }
   }
   .imm-button--primary.is-disabled,
   .imm-button--primary.is-disabled:active,
   .imm-button--primary.is-disabled:focus,
   .imm-button--primary.is-disabled:hover {
-    color: #fff;
-    background-color: #a0cfff;
-    border-color: #a0cfff;
+    color: @--color-white;
+    background-color: @--color-primary-light-5;
+    border-color: @--color-primary-light-5;
   }
   //朴素按钮禁用
   .imm-button--primary.is-disabled.is-plain,
   .imm-button--primary.is-disabled.is-plain:active,
   .imm-button--primary.is-disabled.is-plain:focus,
   .imm-button--primary.is-disabled.is-plain:hover {
-    color: #8cc5ff;
-    background-color: #ecf5ff;
-    border-color: #d9ecff;
+    color: @--color-primary-light-4;
+    background-color: @--color-primary-light-9;
+    border-color: @--color-primary-light-8;
   }
   .imm-button--text {
     border-color: transparent;
-    color: #409eff;
+    color: @--color-primary;
     background: transparent;
     padding-left: 0;
     padding-right: 0;
     &:hover {
-      color: #66b1ff;
+      color: @--color-primary-light-2;
       border-color: transparent;
       background-color: transparent;
     }
   }
+  //.imm-button--success {
+  //  .mixinBtn(success)
+  //}
+  //.imm-button--info {
+  //  .mixinBtn(info)
+  //}
+  //.imm-button--warning {
+  //  .mixinBtn(warning)
+  //}
+  //.imm-button--danger {
+  //  .mixinBtn(danger)
+  //}
   .imm-button--success {
-    color: #fff;
-    background-color: #67c23a;
-    border-color: #67c23a;
+    color: @--color-white;
+    background-color: @--color-success;
+    border-color: @--color-success;
     &:hover {
-      background: #85ce61;
-      border-color: #85ce61;
-      color: #fff;
+      background: @--color-success-light-2;
+      border-color: @--color-success-light-2;
+      color: @--color-white;
     }
   }
   .imm-button--success.is-plain {
-    color: #67c23a;
-    background: #f0f9eb;
-    border-color: #c2e7b0;
+    color: @--color-success;
+    background: @--color-success-light-9;
+    border-color: @--color-success-light-6;
     &:hover {
-      color: #fff;
-      background-color: #67c23a;
-      border-color: #67c23a;
+      color: @--color-white;
+      background-color: @--color-success;
+      border-color: @--color-success;
     }
   }
   .imm-button--success.is-disabled,
   .imm-button--success.is-disabled:active,
   .imm-button--success.is-disabled:focus,
   .imm-button--success.is-disabled:hover {
-    color: #fff;
-    background-color: #b3e19d;
-    border-color: #b3e19d;
+    color: @--color-white;
+    background-color: @--color-success-light-5;
+    border-color: @--color-success-light-5;
   }
   //朴素按钮禁用
   .imm-button--success.is-disabled.is-plain,
   .imm-button--success.is-disabled.is-plain:active,
   .imm-button--success.is-disabled.is-plain:focus,
   .imm-button--success.is-disabled.is-plain:hover {
-    color: #a4da89;
-    background-color: #f0f9eb;
-    border-color: #e1f3d8;
+    color: @--color-success-light-4;
+    background-color: @--color-success-light-9;
+    border-color: @--color-success-light-8;
   }
   .imm-button--info {
-    color: #fff;
-    background-color: #909399;
-    border-color: #909399;
+    color: @--color-white;
+    background-color: @--color-info;
+    border-color: @--color-info;
     &:hover {
-      background: #a6a9ad;
-      border-color: #a6a9ad;
-      color: #fff;
+      background: @--color-info-light-2;
+      border-color: @--color-info-light-2;
+      color: @--color-white;
     }
   }
   .imm-button--info.is-plain {
-    color: #909399;
-    background-color: #f4f4f5;
-    border-color: #d3d4d6;
+    color: @--color-info;
+    background-color: @--color-info-light-9;
+    border-color: @--color-info-light-6;
     &:hover {
-      color: #fff;
-      background-color: #909399;
-      border-color: #909399;
+      color: @--color-white;
+      background-color: @--color-info;
+      border-color: @--color-info;
     }
   }
-  
+
   .imm-button--info.is-disabled,
   .imm-button--info.is-disabled:active,
   .imm-button--info.is-disabled:focus,
   .imm-button--info.is-disabled:hover {
-    color: #fff;
-    background-color: #c8c9cc;
-    border-color: #c8c9cc;
+    color: @--color-white;
+    background-color: @--color-info-light-5;
+    border-color: @--color-info-light-5;
     cursor: not-allowed;
   }
   //朴素按钮禁用
@@ -161,9 +174,9 @@
   .imm-button--info.is-disabled.is-plain:active,
   .imm-button--info.is-disabled.is-plain:focus,
   .imm-button--info.is-disabled.is-plain:hover {
-    color: #bcbec2;
-    background-color: #f4f4f5;
-    border-color: #e9e9eb;
+    color: @--color-info-light-4;
+    background-color: @--color-info-light-9;
+    border-color: @--color-info-light-8;
   }
   .imm-button--warning {
     color: #fff;
@@ -238,27 +251,26 @@
     background-color: #fef0f0;
     border-color: #fde2e2;
   }
-  
+
   .is-round {
     border-radius: 20px;
   }
-  
+
   // size
   .imm-button--medium {
     padding: 10px 20px;
     font-size: 14px;
     border-radius: 4px;
   }
-  
+
   .imm-button--small {
     padding: 9px 15px;
     font-size: 12px;
     border-radius: 3px;
   }
-  
+
   .imm-button--mini {
     padding: 7px 15px;
     font-size: 12px;
     border-radius: 3px;
   }
-  
