--- a/packages/components/src/theme-chalk/button.scss
+++ b/packages/components/src/theme-chalk/button.scss
@@ -1,82 +1,344 @@
 @import "./common/index.scss";
-.imm-button {
+//.imm-button {
+//  display: inline-block;
+//  line-height: 1;
+//  white-space: nowrap;
+//  cursor: pointer;
+//  background: $--color-white;
+//  border: 1px solid $--border-color-base;
+//  color: $--color-text-regular;
+//  -webkit-appearance: none;
+//  text-align: center;
+//  box-sizing: border-box;
+//  outline: none;
+//  margin: 0;
+//  transition: 0.1s;
+//  font-weight: 500;
+//  padding: 12px 20px;
+//  font-size: 14px;
+//  border-radius: 4px;
+//  & [class*=imm-icon]+span {
+//    margin-left: 5px;
+//  }
+//  & span+[class*=imm-icon] {
+//    margin-left: 5px;
+//  }
+//
+//  &:hover {
+//    color: $--color-primary;
+//    border-color: $--color-primary-light-7;
+//    background-color: $--color-primary-light-9;
+//  }
+//  &.is-disabled {
+//    color: $--color-text-placeholder;
+//    cursor: not-allowed;
+//    background-image: none;
+//    background-color: $--color-white;
+//    border-color: $--border-color-lighter;
+//  }
+//  &.is-circle {
+//    border-radius: 50%;
+//    padding: 8px;
+//  }
+//
+//  .is-round {
+//    border-radius: 20px;
+//  }
+//}
+//
+//// size
+//.imm-button--medium {
+//  padding: 10px 20px;
+//  font-size: 14px;
+//  border-radius: 4px;
+//}
+//
+//.imm-button--small {
+//  padding: 9px 15px;
+//  font-size: 12px;
+//  border-radius: 3px;
+//}
+//
+//.imm-button--mini {
+//  padding: 7px 15px;
+//  font-size: 12px;
+//  border-radius: 3px;
+//}
+//
+//.imm-button--primary {
+//  @include button-variant($--color-white, $--color-primary, $--color-primary);
+//}
+//.imm-button--success {
+//  @include button-variant($--color-white, $--color-success, $--color-success);
+//}
+//.imm-button--info {
+//  @include button-variant($--color-white, $--color-info, $--color-info);
+//}
+//.imm-button--warning {
+//  @include button-variant($--color-white, $--color-warning, $--color-warning);
+//}
+//.imm-button--danger {
+//  @include button-variant($--color-white, $--color-danger, $--color-danger);
+//}
+
+/// fontSize||Font|1
+$--button-font-size: $--font-size-base !default;
+/// fontWeight||Font|1
+$--button-font-weight: $--font-weight-primary !default;
+/// borderRadius||Border|2
+$--button-border-radius: $--border-radius-base !default;
+/// padding||Spacing|3
+$--button-padding-vertical: 12px !default;
+/// padding||Spacing|3
+$--button-padding-horizontal: 20px !default;
+
+/// fontSize||Font|1
+$--button-medium-font-size: $--font-size-base !default;
+/// borderRadius||Border|2
+$--button-medium-border-radius: $--border-radius-base !default;
+/// padding||Spacing|3
+$--button-medium-padding-vertical: 10px !default;
+/// padding||Spacing|3
+$--button-medium-padding-horizontal: 20px !default;
+
+/// fontSize||Font|1
+$--button-small-font-size: 12px !default;
+$--button-small-border-radius: #{$--border-radius-base - 1} !default;
+/// padding||Spacing|3
+$--button-small-padding-vertical: 9px !default;
+/// padding||Spacing|3
+$--button-small-padding-horizontal: 15px !default;
+/// fontSize||Font|1
+$--button-mini-font-size: 12px !default;
+$--button-mini-border-radius: #{$--border-radius-base - 1} !default;
+/// padding||Spacing|3
+$--button-mini-padding-vertical: 7px !default;
+/// padding||Spacing|3
+$--button-mini-padding-horizontal: 15px !default;
+
+/// color||Color|0
+$--button-default-font-color: $--color-text-regular !default;
+/// color||Color|0
+$--button-default-background-color: $--color-white !default;
+/// color||Color|0
+$--button-default-border-color: $--border-color-base !default;
+
+/// color||Color|0
+$--button-disabled-font-color: $--color-text-placeholder !default;
+/// color||Color|0
+$--button-disabled-background-color: $--color-white !default;
+/// color||Color|0
+$--button-disabled-border-color: $--border-color-lighter !default;
+
+/// color||Color|0
+$--button-primary-border-color: $--color-primary !default;
+/// color||Color|0
+$--button-primary-font-color: $--color-white !default;
+/// color||Color|0
+$--button-primary-background-color: $--color-primary !default;
+/// color||Color|0
+$--button-success-border-color: $--color-success !default;
+/// color||Color|0
+$--button-success-font-color: $--color-white !default;
+/// color||Color|0
+$--button-success-background-color: $--color-success !default;
+/// color||Color|0
+$--button-warning-border-color: $--color-warning !default;
+/// color||Color|0
+$--button-warning-font-color: $--color-white !default;
+/// color||Color|0
+$--button-warning-background-color: $--color-warning !default;
+/// color||Color|0
+$--button-danger-border-color: $--color-danger !default;
+/// color||Color|0
+$--button-danger-font-color: $--color-white !default;
+/// color||Color|0
+$--button-danger-background-color: $--color-danger !default;
+/// color||Color|0
+$--button-info-border-color: $--color-info !default;
+/// color||Color|0
+$--button-info-font-color: $--color-white !default;
+/// color||Color|0
+$--button-info-background-color: $--color-info !default;
+
+$--button-hover-tint-percent: 20% !default;
+$--button-active-shade-percent: 10% !default;
+
+@include b(button) {
   display: inline-block;
   line-height: 1;
   white-space: nowrap;
   cursor: pointer;
-  background: $--color-white;
-  border: 1px solid $--border-color-base;
-  color: $--color-text-regular;
+  background: $--button-default-background-color;
+  border: $--border-base;
+  border-color: $--button-default-border-color;
+  color: $--button-default-font-color;
   -webkit-appearance: none;
   text-align: center;
   box-sizing: border-box;
   outline: none;
   margin: 0;
-  transition: 0.1s;
-  font-weight: 500;
-  padding: 12px 20px;
-  font-size: 14px;
-  border-radius: 4px;
-  & [class*=imm-icon]+span {
-    margin-left: 6px;
-  }
-  & span+[class*=imm-icon] {
-    margin-left: 6px;
+  transition: .1s;
+  font-weight: $--button-font-weight;
+  @include utils-user-select(none);
+  & + & {
+    margin-left: 10px;
   }
 
-  &:hover {
+  @include button-size($--button-padding-vertical, $--button-padding-horizontal, $--button-font-size, $--button-border-radius);
+
+  &:hover,
+  &:focus {
     color: $--color-primary;
     border-color: $--color-primary-light-7;
     background-color: $--color-primary-light-9;
   }
-  &.is-disabled {
-    color: $--color-text-placeholder;
-    cursor: not-allowed;
-    background-image: none;
-    background-color: $--color-white;
-    border-color: $--border-color-lighter;
-  }
-  &.is-circle {
-    border-radius: 50%;
-    padding: 8px;
+
+  &:active {
+    color: mix($--color-black, $--color-primary, $--button-active-shade-percent);
+    border-color: mix($--color-black, $--color-primary, $--button-active-shade-percent);
+    outline: none;
   }
 
-  .is-round {
+  &::-moz-focus-inner {
+    border: 0;
+  }
+
+  & [class*=imm-icon]+span {
+    margin-left: 5px;
+  }
+  & span+[class*=imm-icon] {
+    margin-left: 5px;
+  }
+
+
+  @include when(plain) {
+    &:hover,
+    &:focus {
+      background: $--color-white;
+      border-color: $--color-primary;
+      color: $--color-primary;
+    }
+
+    &:active {
+      background: $--color-white;
+      border-color: mix($--color-black, $--color-primary, $--button-active-shade-percent);
+      color: mix($--color-black, $--color-primary, $--button-active-shade-percent);
+      outline: none;
+    }
+  }
+
+  @include when(active) {
+    color: mix($--color-black, $--color-primary, $--button-active-shade-percent);
+    border-color: mix($--color-black, $--color-primary, $--button-active-shade-percent);
+  }
+
+  @include when(disabled) {
+    &,
+    &:hover,
+    &:focus {
+      color: $--button-disabled-font-color;
+      cursor: not-allowed;
+      background-image: none;
+      background-color: $--button-disabled-background-color;
+      border-color: $--button-disabled-border-color;
+    }
+
+    &.el-button--text {
+      background-color: transparent;
+    }
+
+    &.is-plain {
+      &,
+      &:hover,
+      &:focus {
+        background-color: $--color-white;
+        border-color: $--button-disabled-border-color;
+        color: $--button-disabled-font-color;
+      }
+    }
+  }
+
+  @include when(loading) {
+    position: relative;
+    pointer-events: none;
+
+    &:before {
+      pointer-events: none;
+      content: '';
+      position: absolute;
+      left: -1px;
+      top: -1px;
+      right: -1px;
+      bottom: -1px;
+      border-radius: inherit;
+      background-color: rgba(255,255,255,.35);
+    }
+  }
+  @include when(round) {
     border-radius: 20px;
+    padding: 12px 23px;
   }
-}
+  @include when(circle) {
+    border-radius: 50%;
+    padding: $--button-padding-vertical;
+  }
+  @include m(primary) {
+    @include button-variant($--button-primary-font-color, $--button-primary-background-color, $--button-primary-border-color);
+  }
+  @include m(success) {
+    @include button-variant($--button-success-font-color, $--button-success-background-color, $--button-success-border-color);
+  }
+  @include m(warning) {
+    @include button-variant($--button-warning-font-color, $--button-warning-background-color, $--button-warning-border-color);
+  }
+  @include m(danger) {
+    @include button-variant($--button-danger-font-color, $--button-danger-background-color, $--button-danger-border-color);
+  }
+  @include m(info) {
+    @include button-variant($--button-info-font-color, $--button-info-background-color, $--button-info-border-color);
+  }
+  @include m(medium) {
+    @include button-size($--button-medium-padding-vertical, $--button-medium-padding-horizontal, $--button-medium-font-size, $--button-medium-border-radius);
+    @include when(circle) {
+      padding: $--button-medium-padding-vertical;
+    }
+  }
+  @include m(small) {
+    @include button-size($--button-small-padding-vertical, $--button-small-padding-horizontal, $--button-small-font-size, $--button-small-border-radius);
+    @include when(circle) {
+      padding: $--button-small-padding-vertical;
+    }
+  }
+  @include m(mini) {
+    @include button-size($--button-mini-padding-vertical, $--button-mini-padding-horizontal, $--button-mini-font-size, $--button-mini-border-radius);
+    @include when(circle) {
+      padding: $--button-mini-padding-vertical;
+    }
+  }
+  @include m(text) {
+    border-color: transparent;
+    color: $--color-primary;
+    background: transparent;
+    padding-left: 0;
+    padding-right: 0;
 
-// size
-.imm-button--medium {
-  padding: 10px 20px;
-  font-size: 14px;
-  border-radius: 4px;
-}
+    &:hover,
+    &:focus {
+      color: mix($--color-white, $--color-primary, $--button-hover-tint-percent);
+      border-color: transparent;
+      background-color: transparent;
+    }
+    &:active {
+      color: mix($--color-black, $--color-primary, $--button-active-shade-percent);
+      border-color: transparent;
+      background-color: transparent;
+    }
 
-.imm-button--small {
-  padding: 9px 15px;
-  font-size: 12px;
-  border-radius: 3px;
-}
-
-.imm-button--mini {
-  padding: 7px 15px;
-  font-size: 12px;
-  border-radius: 3px;
-}
-
-.imm-button--primary {
-  @include button-variant($--color-white, $--color-primary, $--color-primary);
-}
-.imm-button--success {
-  @include button-variant($--color-white, $--color-success, $--color-success);
-}
-.imm-button--info {
-  @include button-variant($--color-white, $--color-info, $--color-info);
-}
-.imm-button--warning {
-  @include button-variant($--color-white, $--color-warning, $--color-warning);
-}
-.imm-button--danger {
-  @include button-variant($--color-white, $--color-danger, $--color-danger);
+    &.is-disabled,
+    &.is-disabled:hover,
+    &.is-disabled:focus {
+      border-color: transparent;
+    }
+  }
 }
